--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 							<a class="dropdown-item" href="shop.html">Shop</a>
 							<a class="dropdown-item" href="product-single.html">Single Product</a>
 							<a class="dropdown-item" href="room.html">Cart</a>
-							
+							<a class="dropdown-item" href="checkout.html">Checkout</a>
 						</div>
 					</li>
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -74,9 +74,9 @@
 
 					<div class="col-md-8 col-sm-12 text-center ftco-animate">
 						<span class="subheading">Welcome</span>
-						<h1 class="mb-4">THE SECRET IS IN THE BEANS</h1>
-						<p class="mb-4 mb-md-5">Exceptional and rarest coffees from around the world. Sourced for the
-							season, roasted at Starbucks Reserve® Roasteries and crafted with care.</p>
+						<h1 class="mb-4">The Best Coffee Testing Experience</h1>
+						<p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the
+							necessary regelialia.</p>
 						<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#"
 								class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
 					</div>
@@ -92,9 +92,9 @@
 
 					<div class="col-md-8 col-sm-12 text-center ftco-animate">
 						<span class="subheading">Welcome</span>
-						<h1 class="mb-4">EXPECT MORE THAN JUST COFFEE</h1>
-						<p class="mb-4 mb-md-5">We’re a neighborhood gathering place, a part of your daily routine. Get
-							to know us and you’ll see: we are so much more than what we brew.</p>
+						<h1 class="mb-4">Amazing Taste &amp; Beautiful Place</h1>
+						<p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the
+							necessary regelialia.</p>
 						<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#"
 								class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
 					</div>
@@ -110,27 +110,9 @@
 
 					<div class="col-md-8 col-sm-12 text-center ftco-animate">
 						<span class="subheading">Welcome</span>
-						<h1 class="mb-4">SPICE UP YOUR FALL</h1>
-						<p class="mb-4 mb-md-5">Warm your senses with our delightfully creamy lattes. Try them hot or
-							iced.</p>
-						<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#"
-								class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
-					</div>
-
-				</div>
-			</div>
-		</div>
-
-		<div class="slider-item" style="background-image: url(images/bg_5.jpg);">
-			<div class="overlay"></div>
-			<div class="container">
-				<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-
-					<div class="col-md-8 col-sm-12 text-center ftco-animate">
-						<span class="subheading">Welcome</span>
-						<h1 class="mb-4">MAKE EVERY BUCK WORTH IT WITH STARBUCKS</h1>
-						<p class="mb-4 mb-md-5">We inspire and nurture the human spirit - one person, one cup and one
-							neighborhood at a time.</p>
+						<h1 class="mb-4">Creamy Hot and Ready to Serve</h1>
+						<p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the
+							necessary regelialia.</p>
 						<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#"
 								class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
 					</div>
@@ -148,22 +130,22 @@
 						<div class="col-md-4 d-flex ftco-animate">
 							<div class="icon"><span class="icon-phone"></span></div>
 							<div class="text">
-								<h3>800-Starbuc (800-782-7282)</h3>
-								<p>Our customer service hours are Monday – Sunday, 5:00am to 8:00pm</p>
+								<h3>000 (123) 456 7890</h3>
+								<p>A small river named Duden flows by their place and supplies.</p>
 							</div>
 						</div>
 						<div class="col-md-4 d-flex ftco-animate">
 							<div class="icon"><span class="icon-my_location"></span></div>
 							<div class="text">
-								<h3>2401 Utah Avenue</h3>
-								<p> South Seattle, Washington 98134, United States</p>
+								<h3>198 West 21th Street</h3>
+								<p> 203 Fake St. Mountain View, San Francisco, California, USA</p>
 							</div>
 						</div>
 						<div class="col-md-4 d-flex ftco-animate">
 							<div class="icon"><span class="icon-clock-o"></span></div>
 							<div class="text">
-								<h3>Open Monday - Sunday</h3>
-								<p>5:00am to 9:00pm</p>
+								<h3>Open Monday-Friday</h3>
+								<p>8:00am - 9:00pm</p>
 							</div>
 						</div>
 					</div>
@@ -220,12 +202,12 @@
 					<h2 class="mb-4">Our Story</h2>
 				</div>
 				<div>
-					<p>Our story begins in 1971 along the cobblestone streets of Seattle’s historic Pike Place Market.
-						It was here where Starbucks opened its first store, offering fresh-roasted coffee beans, tea and
-						spices from around the world for our customers to take home. Our name was inspired by the
-						classic tale, “Moby-Dick,” evoking the seafaring tradition of the early coffee traders. In
-						everything we do, we are always dedicated to Our Mission: to inspire and nurture the human
-						spirit – one person, one cup, and one neighborhood at a time.</p>
+					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it
+						would have been rewritten a thousand times and everything that was left from its origin would be
+						the word "and" and the Little Blind Text should turn around and return to its own, safe country.
+						But nothing the copy said could convince her and so it didn’t take long until a few insidious
+						Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their
+						agency, where they abused her for their.</p>
 				</div>
 			</div>
 		</div>
@@ -240,9 +222,9 @@
 							<span class="flaticon-choices"></span>
 						</div>
 						<div class="media-body">
-							<h3 class="heading">Innovation</h3>
-							<p>We aim at challenging the status quo and finding new ways to grow our company and each
-								other while being present, connecting with transparency, dignity and respect.</p>
+							<h3 class="heading">Easy to Order</h3>
+							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+								unorthographic.</p>
 						</div>
 					</div>
 				</div>
@@ -252,9 +234,9 @@
 							<span class="flaticon-delivery-truck"></span>
 						</div>
 						<div class="media-body">
-							<h3 class="heading">Ease of order</h3>
-							<p>We continue to serve customer needs through safe and convenient methods, including
-								drive-through service, dine-in, digital ordering and contactless pay. </p>
+							<h3 class="heading">Fastest Delivery</h3>
+							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+								unorthographic.</p>
 						</div>
 					</div>
 				</div>
@@ -265,8 +247,8 @@
 						</div>
 						<div class="media-body">
 							<h3 class="heading">Quality Coffee</h3>
-							<p>It's our goal for all of our coffee to be grown under the highest standards of quality,
-								using ethical sourcing practices. More than 30 blends of coffee available.</p>
+							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
+								unorthographic.</p>
 						</div>
 					</div>
 				</div>
@@ -281,10 +263,9 @@
 					<div class="heading-section text-md-right ftco-animate">
 						<span class="subheading">Discover</span>
 						<h2 class="mb-4">Our Menu</h2>
-						<p class="mb-4">Whether you're searching for something new to warm your mug, seeking the best
-							brew method for your favorite blend or exploring our rarest offerings, you’ve come to the
-							right place. We have all the tools you need to bring your brewing game to the next level.
-						</p>
+						<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
+							Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
+							coast of the Semantics, a large language ocean.</p>
 						<p><a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a></p>
 					</div>
 				</div>
@@ -327,8 +308,8 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="33833">0</strong>
-									<span>Cafes Worldwide</span>
+									<strong class="number" data-number="100">0</strong>
+									<span>Coffee Branches</span>
 								</div>
 							</div>
 						</div>
@@ -336,8 +317,8 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="32">0</strong>
-									<span>Awards</span>
+									<strong class="number" data-number="85">0</strong>
+									<span>Number of Awards</span>
 								</div>
 							</div>
 						</div>
@@ -345,8 +326,8 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="383000">0</strong>
-									<span>Employees</span>
+									<strong class="number" data-number="10567">0</strong>
+									<span>Happy Customer</span>
 								</div>
 							</div>
 						</div>
@@ -354,7 +335,7 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="170000">0</strong>
+									<strong class="number" data-number="900">0</strong>
 									<span>Staff</span>
 								</div>
 							</div>
@@ -371,8 +352,8 @@
 				<div class="col-md-7 heading-section ftco-animate text-center">
 					<span class="subheading">Discover</span>
 					<h2 class="mb-4">Best Coffee Sellers</h2>
-					<p>From familiar favorites to delicious discoveries, Starbucks offers unlimited ways to enjoy your
-						everyday cup.</p>
+					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
+						live the blind texts.</p>
 				</div>
 			</div>
 			<div class="row">
@@ -380,9 +361,9 @@
 					<div class="menu-entry">
 						<a href="#" class="img" style="background-image: url(images/menu-1.jpg);"></a>
 						<div class="text text-center pt-4">
-							<h3><a href="#">Blonde Vanilla Latte</a></h3>
-							<p>Blonde Espresso, velvety steamed milk & vanilla syrup make a beloved espresso classic</p>
-							<p class="price"><span>$3.45</span></p>
+							<h3><a href="#">Coffee Capuccino</a></h3>
+							<p>A small river named Duden flows by their place and supplies</p>
+							<p class="price"><span>$5.90</span></p>
 							<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
 						</div>
 					</div>
@@ -391,10 +372,9 @@
 					<div class="menu-entry">
 						<a href="#" class="img" style="background-image: url(images/menu-2.jpg);"></a>
 						<div class="text text-center pt-4">
-							<h3><a href="#">Iced White Choc Mocha</a></h3>
-							<p>Espresso meets white choc sauce, milk & ice, being finished off with sweetened whipped
-								cream</p>
-							<p class="price"><span>$3.75</span></p>
+							<h3><a href="#">Coffee Capuccino</a></h3>
+							<p>A small river named Duden flows by their place and supplies</p>
+							<p class="price"><span>$5.90</span></p>
 							<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
 						</div>
 					</div>
@@ -403,9 +383,9 @@
 					<div class="menu-entry">
 						<a href="#" class="img" style="background-image: url(images/menu-3.jpg);"></a>
 						<div class="text text-center pt-4">
-							<h3><a href="#">Java Chip Frappuccino</a></h3>
-							<p>Mocha sauce & Frap chips blended with milk & ice, topped with whipped cream & drizzle</p>
-							<p class="price"><span>$5.10</span></p>
+							<h3><a href="#">Coffee Capuccino</a></h3>
+							<p>A small river named Duden flows by their place and supplies</p>
+							<p class="price"><span>$5.90</span></p>
 							<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
 						</div>
 					</div>
@@ -414,10 +394,9 @@
 					<div class="menu-entry">
 						<a href="#" class="img" style="background-image: url(images/menu-4.jpg);"></a>
 						<div class="text text-center pt-4">
-							<h3><a href="#">Pumpkin Spice Latte</a></h3>
-							<p>Espresso & steamed milk with the celebrated combo of pumpkin, cinnamon, nutmeg & clove
-							</p>
-							<p class="price"><span>$4.25</span></p>
+							<h3><a href="#">Coffee Capuccino</a></h3>
+							<p>A small river named Duden flows by their place and supplies</p>
+							<p class="price"><span>$5.90</span></p>
 							<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
 						</div>
 					</div>
@@ -425,6 +404,7 @@
 			</div>
 		</div>
 	</section>
+
 	<section class="ftco-gallery">
 		<div class="container-wrap">
 			<div class="row no-gutters">
