--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
 			<a class="navbar-brand" href="index.html">Coffee<small>Blend</small></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
@@ -67,16 +67,16 @@
 	<!-- END nav -->
 
 	<section class="home-slider owl-carousel">
-		<div class="slider-item" style="background-image: url(images/bg_1.jpg);">
+		<div class="slider-item" style="background-image: url(images/bg_5.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
 					<div class="col-md-8 col-sm-12 text-center ftco-animate">
 						<span class="subheading">Welcome</span>
-						<h1 class="mb-4">The Best Coffee Testing Experience</h1>
-						<p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p>
+						<h1 class="mb-4">THE SECRET IS IN THE BEANS</h1>
+						<p class="mb-4 mb-md-5">Exceptional and rarest coffees from around the world. Sourced for the
+							season, roasted at Starbucks Reserve® Roasteries and crafted with care.</p>
 						<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#"
 								class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
 					</div>
@@ -85,16 +85,16 @@
 			</div>
 		</div>
 
-		<div class="slider-item" style="background-image: url(images/bg_2.jpg);">
+		<div class="slider-item" style="background-image: url(images/bg_6.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
 					<div class="col-md-8 col-sm-12 text-center ftco-animate">
 						<span class="subheading">Welcome</span>
-						<h1 class="mb-4">Amazing Taste &amp; Beautiful Place</h1>
-						<p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p>
+						<h1 class="mb-4">EXPECT MORE THAN JUST COFFEE</h1>
+						<p class="mb-4 mb-md-5">We’re a neighborhood gathering place, a part of your daily routine. Get
+							to know us and you’ll see: we are so much more than what we brew.</p>
 						<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#"
 								class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
 					</div>
@@ -103,16 +103,34 @@
 			</div>
 		</div>
 
-		<div class="slider-item" style="background-image: url(images/bg_3.jpg);">
+		<div class="slider-item" style="background-image: url(images/bg_7.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
 					<div class="col-md-8 col-sm-12 text-center ftco-animate">
 						<span class="subheading">Welcome</span>
-						<h1 class="mb-4">Creamy Hot and Ready to Serve</h1>
-						<p class="mb-4 mb-md-5">A small river named Duden flows by their place and supplies it with the
-							necessary regelialia.</p>
+						<h1 class="mb-4">SPICE UP YOUR FALL</h1>
+						<p class="mb-4 mb-md-5">Warm your senses with our delightfully creamy lattes. Try them hot or
+							iced.</p>
+						<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#"
+								class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="slider-item" style="background-image: url(images/bg_8.jpg);">
+			<div class="overlay"></div>
+			<div class="container">
+				<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+
+					<div class="col-md-8 col-sm-12 text-center ftco-animate">
+						<span class="subheading">Welcome</span>
+						<h1 class="mb-4">MAKE EVERY BUCK WORTH IT WITH STARBUCKS</h1>
+						<p class="mb-4 mb-md-5">We inspire and nurture the human spirit - one person, one cup and one
+							neighborhood at a time.</p>
 						<p><a href="#" class="btn btn-primary p-3 px-xl-4 py-xl-3">Order Now</a> <a href="#"
 								class="btn btn-white btn-outline-white p-3 px-xl-4 py-xl-3">View Menu</a></p>
 					</div>
@@ -130,22 +148,22 @@
 						<div class="col-md-4 d-flex ftco-animate">
 							<div class="icon"><span class="icon-phone"></span></div>
 							<div class="text">
-								<h3>000 (123) 456 7890</h3>
-								<p>A small river named Duden flows by their place and supplies.</p>
+								<h3>800-Starbuc (800-782-7282)</h3>
+								<p>Our customer service hours are Monday – Sunday, 5:00am to 8:00pm</p>
 							</div>
 						</div>
 						<div class="col-md-4 d-flex ftco-animate">
 							<div class="icon"><span class="icon-my_location"></span></div>
 							<div class="text">
-								<h3>198 West 21th Street</h3>
-								<p> 203 Fake St. Mountain View, San Francisco, California, USA</p>
+								<h3>2401 Utah Avenue</h3>
+								<p> South Seattle, Washington 98134, United States</p>
 							</div>
 						</div>
 						<div class="col-md-4 d-flex ftco-animate">
 							<div class="icon"><span class="icon-clock-o"></span></div>
 							<div class="text">
-								<h3>Open Monday-Friday</h3>
-								<p>8:00am - 9:00pm</p>
+								<h3>Open Monday - Sunday</h3>
+								<p>5:00am to 9:00pm</p>
 							</div>
 						</div>
 					</div>
@@ -194,7 +212,7 @@
 	</section>
 
 	<section class="ftco-about d-md-flex">
-		<div class="one-half img" style="background-image: url(images/about.jpg);"></div>
+		<div class="one-half img" style="background-image: url(images/about_1.jpg);"></div>
 		<div class="one-half ftco-animate">
 			<div class="overlap">
 				<div class="heading-section ftco-animate ">
@@ -202,12 +220,12 @@
 					<h2 class="mb-4">Our Story</h2>
 				</div>
 				<div>
-					<p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it
-						would have been rewritten a thousand times and everything that was left from its origin would be
-						the word "and" and the Little Blind Text should turn around and return to its own, safe country.
-						But nothing the copy said could convince her and so it didn’t take long until a few insidious
-						Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their
-						agency, where they abused her for their.</p>
+					<p>Our story begins in 1971 along the cobblestone streets of Seattle’s historic Pike Place Market.
+						It was here where Starbucks opened its first store, offering fresh-roasted coffee beans, tea and
+						spices from around the world for our customers to take home. Our name was inspired by the
+						classic tale, “Moby-Dick,” evoking the seafaring tradition of the early coffee traders. In
+						everything we do, we are always dedicated to Our Mission: to inspire and nurture the human
+						spirit – one person, one cup, and one neighborhood at a time.</p>
 				</div>
 			</div>
 		</div>
@@ -222,9 +240,9 @@
 							<span class="flaticon-choices"></span>
 						</div>
 						<div class="media-body">
-							<h3 class="heading">Easy to Order</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-								unorthographic.</p>
+							<h3 class="heading">Innovation</h3>
+							<p>We aim at challenging the status quo and finding new ways to grow our company and each
+								other while being present, connecting with transparency, dignity and respect.</p>
 						</div>
 					</div>
 				</div>
@@ -234,9 +252,9 @@
 							<span class="flaticon-delivery-truck"></span>
 						</div>
 						<div class="media-body">
-							<h3 class="heading">Fastest Delivery</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-								unorthographic.</p>
+							<h3 class="heading">Ease of order</h3>
+							<p>We continue to serve customer needs through safe and convenient methods, including
+								drive-through service, dine-in, digital ordering and contactless pay. </p>
 						</div>
 					</div>
 				</div>
@@ -247,8 +265,8 @@
 						</div>
 						<div class="media-body">
 							<h3 class="heading">Quality Coffee</h3>
-							<p>Even the all-powerful Pointing has no control about the blind texts it is an almost
-								unorthographic.</p>
+							<p>It's our goal for all of our coffee to be grown under the highest standards of quality,
+								using ethical sourcing practices. More than 30 blends of coffee available.</p>
 						</div>
 					</div>
 				</div>
@@ -263,9 +281,10 @@
 					<div class="heading-section text-md-right ftco-animate">
 						<span class="subheading">Discover</span>
 						<h2 class="mb-4">Our Menu</h2>
-						<p class="mb-4">Far far away, behind the word mountains, far from the countries Vokalia and
-							Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the
-							coast of the Semantics, a large language ocean.</p>
+						<p class="mb-4">Whether you're searching for something new to warm your mug, seeking the best
+							brew method for your favorite blend or exploring our rarest offerings, you’ve come to the
+							right place. We have all the tools you need to bring your brewing game to the next level.
+						</p>
 						<p><a href="#" class="btn btn-primary btn-outline-primary px-4 py-3">View Full Menu</a></p>
 					</div>
 				</div>
@@ -273,22 +292,22 @@
 					<div class="row">
 						<div class="col-md-6">
 							<div class="menu-entry">
-								<a href="#" class="img" style="background-image: url(images/menu-1.jpg);"></a>
+								<a href="#" class="img" style="background-image: url(images/menu1.png);"></a>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="menu-entry mt-lg-4">
-								<a href="#" class="img" style="background-image: url(images/menu-2.jpg);"></a>
+								<a href="#" class="img" style="background-image: url(images/menu2.png);"></a>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="menu-entry">
-								<a href="#" class="img" style="background-image: url(images/menu-3.jpg);"></a>
+								<a href="#" class="img" style="background-image: url(images/menu3.jpg);"></a>
 							</div>
 						</div>
 						<div class="col-md-6">
 							<div class="menu-entry mt-lg-4">
-								<a href="#" class="img" style="background-image: url(images/menu-4.jpg);"></a>
+								<a href="#" class="img" style="background-image: url(images/menu4.png);"></a>
 							</div>
 						</div>
 					</div>
@@ -297,7 +316,7 @@
 		</div>
 	</section>
 
-	<section class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(images/bg_2.jpg);"
+	<section class="ftco-counter ftco-bg-dark img" id="section-counter" style="background-image: url(images/bg_10.jpg);"
 		data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
@@ -308,8 +327,8 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="100">0</strong>
-									<span>Coffee Branches</span>
+									<strong class="number" data-number="33833">0</strong>
+									<span>Cafes Worldwide</span>
 								</div>
 							</div>
 						</div>
@@ -317,8 +336,8 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="85">0</strong>
-									<span>Number of Awards</span>
+									<strong class="number" data-number="32">0</strong>
+									<span>Awards</span>
 								</div>
 							</div>
 						</div>
@@ -326,8 +345,8 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="10567">0</strong>
-									<span>Happy Customer</span>
+									<strong class="number" data-number="383000">0</strong>
+									<span>Employees</span>
 								</div>
 							</div>
 						</div>
@@ -335,7 +354,7 @@
 							<div class="block-18 text-center">
 								<div class="text">
 									<div class="icon"><span class="flaticon-coffee-cup"></span></div>
-									<strong class="number" data-number="900">0</strong>
+									<strong class="number" data-number="170000">0</strong>
 									<span>Staff</span>
 								</div>
 							</div>
@@ -352,51 +371,53 @@
 				<div class="col-md-7 heading-section ftco-animate text-center">
 					<span class="subheading">Discover</span>
 					<h2 class="mb-4">Best Coffee Sellers</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-						live the blind texts.</p>
+					<p>From familiar favorites to delicious discoveries, Starbucks offers unlimited ways to enjoy your
+						everyday cup.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-3">
 					<div class="menu-entry">
-						<a href="#" class="img" style="background-image: url(images/menu-1.jpg);"></a>
+						<a href="#" class="img" style="background-image: url(images/bs1.png);"></a>
 						<div class="text text-center pt-4">
-							<h3><a href="#">Coffee Capuccino</a></h3>
-							<p>A small river named Duden flows by their place and supplies</p>
-							<p class="price"><span>$5.90</span></p>
+							<h3><a href="#">Blonde Vanilla Latte</a></h3>
+							<p>Blonde Espresso, velvety steamed milk & vanilla syrup make a beloved espresso classic</p>
+							<p class="price"><span>$3.45</span></p>
 							<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="menu-entry">
-						<a href="#" class="img" style="background-image: url(images/menu-2.jpg);"></a>
+						<a href="#" class="img" style="background-image: url(images/bs2.png);"></a>
 						<div class="text text-center pt-4">
-							<h3><a href="#">Coffee Capuccino</a></h3>
-							<p>A small river named Duden flows by their place and supplies</p>
-							<p class="price"><span>$5.90</span></p>
+							<h3><a href="#">Java Chip Frappuccino</a></h3>
+							<p>Mocha sauce & Frap chips blended with milk & ice, topped with whipped cream & drizzle</p>
+							<p class="price"><span>$5.10</span></p>
 							<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="menu-entry">
-						<a href="#" class="img" style="background-image: url(images/menu-3.jpg);"></a>
+						<a href="#" class="img" style="background-image: url(images/bs3.png);"></a>
 						<div class="text text-center pt-4">
-							<h3><a href="#">Coffee Capuccino</a></h3>
-							<p>A small river named Duden flows by their place and supplies</p>
-							<p class="price"><span>$5.90</span></p>
+							<h3><a href="#">Iced White Choc Mocha</a></h3>
+							<p>Espresso meets white choc sauce, milk & ice, being finished off with sweetened whipped
+								cream</p>
+							<p class="price"><span>$3.75</span></p>
 							<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-3">
 					<div class="menu-entry">
-						<a href="#" class="img" style="background-image: url(images/menu-4.jpg);"></a>
+						<a href="#" class="img" style="background-image: url(images/bs4.png);"></a>
 						<div class="text text-center pt-4">
-							<h3><a href="#">Coffee Capuccino</a></h3>
-							<p>A small river named Duden flows by their place and supplies</p>
-							<p class="price"><span>$5.90</span></p>
+							<h3><a href="#">Pumpkin Spice Latte</a></h3>
+							<p>Espresso & steamed milk with the celebrated combo of pumpkin, cinnamon, nutmeg & clove
+							</p>
+							<p class="price"><span>$4.25</span></p>
 							<p><a href="#" class="btn btn-primary btn-outline-primary">Add to Cart</a></p>
 						</div>
 					</div>
