fixing social icons

--- a/index.html
+++ b/index.html
@@ -888,20 +888,6 @@
 							<li><a href="#" class="py-2 d-block">Stories and News</a></li>
 							<li><a href="#" class="py-2 d-block">Starbucks Archieve</a></li>
 						</ul>
-						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-							<li class="ftco-animate"><a href="https://open.spotify.com/user/starbucks"><span
-										class="icon-spotify"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.facebook.com/Starbucks/"><span
-										class="icon-facebook"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.pinterest.com/starbucks/"><span
-										class="icon-pinterest"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.instagram.com/starbucks/"><span
-										class="icon-instagram"></span></a></li>
-							<li class="ftco-animate"><a href="https://www.youtube.com/starbucks"><span
-										class="icon-youtube"></span></a></li>
-							<li class="ftco-animate"><a href="https://twitter.com/starbucks/"><span
-										class="icon-twitter"></span></a></li>
-						</ul>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 mb-5 mb-md-5">
@@ -962,6 +948,20 @@
 					</div>
 				</div>
 			</div>
+			<ul class="ftco-footer-social list-unstyled mt-5">
+				<li class="ftco-animate"><a href="https://open.spotify.com/user/starbucks"><span
+							class="icon-spotify"></span></a></li>
+				<li class="ftco-animate"><a href="https://www.facebook.com/Starbucks/"><span
+							class="icon-facebook"></span></a></li>
+				<li class="ftco-animate"><a href="https://www.pinterest.com/starbucks/"><span
+							class="icon-pinterest"></span></a></li>
+				<li class="ftco-animate"><a href="https://www.instagram.com/starbucks/"><span
+							class="icon-instagram"></span></a></li>
+				<li class="ftco-animate"><a href="https://www.youtube.com/starbucks"><span
+							class="icon-youtube"></span></a></li>
+				<li class="ftco-animate"><a href="https://twitter.com/starbucks/"><span
+							class="icon-twitter"></span></a></li>
+			</ul>
 			<div class="row">
 				<div class="col-md-12 text-center">
 
