--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 
 <head>
-	<title>Starbucks</title>
+	<title>Starbucks Coffee Company</title>
+	<link rel = "icon" href = 
+"images/logo.jpg" 
+        type = "image/x-icon">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -33,7 +36,7 @@
 <body>
 		<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Coffee<small>Blend</small></a>
+			<a class="navbar-brand" href="index.html"><img class="logo" src="images/logo.jpg" alt="logo" height="65px" width="65px"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
 				aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
@@ -42,9 +45,9 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+					<li class="nav-item"><a href="services.html" class="nav-link">Rewards</a></li>
+					<li class="nav-item"><a href="blog.html" class="nav-link">Gift Cards</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link">Blog</a></li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Shop</a>
@@ -55,7 +58,7 @@
 							<a class="dropdown-item" href="checkout.html">Checkout</a>
 						</div>
 					</li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+					<li class="nav-item"><a href="contact.html" class="nav-link">Sign in</a></li>
 					<li class="nav-item cart"><a href="cart.html" class="nav-link"><span
 								class="icon icon-shopping_cart"></span><span
 								class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a>
