removing extra pages

--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 
 <head>
 	<title>Starbucks Coffee Company</title>
-	<link rel = "icon" href = 
-"images/logo.jpg" 
-        type = "image/x-icon">
+	<link rel = "icon" href = "images/logo.jpg" type = "image/x-icon">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -44,22 +42,22 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="menu.html" class="nav-link">Menu</a></li>
-					<li class="nav-item"><a href="services.html" class="nav-link">Rewards</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Gift Cards</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">Blog</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Menu</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Rewards</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Gift Cards</a></li>
+					<li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
 					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown"
+						<a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
 							aria-haspopup="true" aria-expanded="false">Shop</a>
 						<div class="dropdown-menu" aria-labelledby="dropdown04">
-							<a class="dropdown-item" href="shop.html">Shop</a>
-							<a class="dropdown-item" href="product-single.html">Single Product</a>
-							<a class="dropdown-item" href="room.html">Cart</a>
-							<a class="dropdown-item" href="checkout.html">Checkout</a>
+							<a class="dropdown-item" href="#">Shop</a>
+							<a class="dropdown-item" href="#">Single Product</a>
+							<a class="dropdown-item" href="#">Cart</a>
+							<a class="dropdown-item" href="#">Checkout</a>
 						</div>
 					</li>
-					<li class="nav-item"><a href="contact.html" class="nav-link">Sign in</a></li>
-					<li class="nav-item cart"><a href="cart.html" class="nav-link"><span
+					<li class="nav-item"><a href="#" class="nav-link">Sign in</a></li>
+					<li class="nav-item cart"><a href="#" class="nav-link"><span
 								class="icon icon-shopping_cart"></span><span
 								class="bag d-flex justify-content-center align-items-center"><small>1</small></span></a>
 					</li>
@@ -523,7 +521,7 @@
 													<h3><a href="#">Turkey, Provolone & Pesto on Ciabatta</a></h3>
 													<p>Thick-sliced turkey breast, melted provolone cheese, dry-roasted
 														red peppers and basil pesto on a ciabatta roll.</p>
-													<p class="price"><span>$2.90</span></p>
+													<p class="price"><span>$5.45</span></p>
 													<p><a href="#" class="btn btn-primary btn-outline-primary">Add to
 															cart</a></p>
 												</div>
@@ -537,7 +535,7 @@
 													<h3><a href="#">Crispy Grilled Cheese on Sourdough</a></h3>
 													<p>A blend of white Cheddar and mozzarella cheeses on sourdough
 														bread, topped with a Parmesan butter spread.</p>
-													<p class="price"><span>$2.90</span></p>
+													<p class="price"><span>$6.90</span></p>
 													<p><a href="#" class="btn btn-primary btn-outline-primary">Add to
 															cart</a></p>
 												</div>
@@ -559,7 +557,7 @@
 														sauce and steamed milk, topped with sweetened whipped
 														cream. The coffee that always satisfies.
 													</p>
-													<p class="price"><span>$2.90</span></p>
+													<p class="price"><span>$3.50</span></p>
 													<p><a href="#" class="btn btn-primary btn-outline-primary">Add to
 															cart</a></p>
 												</div>
@@ -574,7 +572,7 @@
 													<p>Steamed milk with vanilla and chocolate syrups. Topped
 														with sweetened whipped cream and chocolate drizzle. A
 														timeless classic made to sweeten your spirits.</p>
-													<p class="price"><span>$2.90</span></p>
+													<p class="price"><span>$4.65</span></p>
 													<p><a href="#" class="btn btn-primary btn-outline-primary">Add to
 															cart</a></p>
 												</div>
@@ -589,7 +587,7 @@
 													<p>Our custom blend of Cold Brew Coffee accented with vanilla and
 														topped with a delicate float of vanilla sweet cream. It's
 														over-the-top and super-smooth.</p>
-													<p class="price"><span>$2.90</span></p>
+													<p class="price"><span>$2.50</span></p>
 													<p><a href="#" class="btn btn-primary btn-outline-primary">Add to
 															cart</a></p>
 												</div>
@@ -609,7 +607,7 @@
 													<h3><a href="#">Double Chocolate Brownie</a></h3>
 													<p>Rich chocolate brownie with generous chunks of semisweet
 														chocolate oozing with chocolate sauce.</p>
-													<p class="price"><span>$2.90</span></p>
+													<p class="price"><span>$7.25</span></p>
 													<p><a href="#" class="btn btn-primary btn-outline-primary">Add to
 															cart</a></p>
 												</div>
@@ -623,7 +621,7 @@
 													<h3><a href="#">Cinnamon Coffee Cake</a></h3>
 													<p>Buttery, moist, coffee cake swirled with a cinnamon-sugar blend
 														and finished with a crunchy streusel topping.</p>
-													<p class="price"><span>$2.90</span></p>
+													<p class="price"><span>$7.50</span></p>
 													<p><a href="#" class="btn btn-primary btn-outline-primary">Add to
 															cart</a></p>
 												</div>
@@ -637,7 +635,7 @@
 													<h3><a href="#">Chocolate Croissant</a></h3>
 													<p>Two generous pieces of chocolate wrapped in a butter croissant
 														with soft, flaky layers and a golden-brown crust.</p>
-													<p class="price"><span>$2.90</span></p>
+													<p class="price"><span>$5.00</span></p>
 													<p><a href="#" class="btn btn-primary btn-outline-primary">Add to
 															cart</a></p>
 												</div>
@@ -765,7 +763,7 @@
 			<div class="row d-flex">
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry align-self-stretch">
-						<a href="blog-single.html" class="block-20"
+						<a href="#" class="block-20"
 							style="background-image: url('images/image_1.jpg');">
 						</a>
 						<div class="text py-4 d-block">
@@ -784,7 +782,7 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry align-self-stretch">
-						<a href="blog-single.html" class="block-20"
+						<a href="#" class="block-20"
 							style="background-image: url('images/image_2.jpg');">
 						</a>
 						<div class="text py-4 d-block">
@@ -803,7 +801,7 @@
 				</div>
 				<div class="col-md-4 d-flex ftco-animate">
 					<div class="blog-entry align-self-stretch">
-						<a href="blog-single.html" class="block-20"
+						<a href="#" class="block-20"
 							style="background-image: url('images/image_3.jpg');">
 						</a>
 						<div class="text py-4 d-block">
